--- a/cafe-melhorado/HTML/index.html
+++ b/cafe-melhorado/HTML/index.html
@@ -6,10 +6,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café | Início</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
+    <style>
+        body {
+        background-color: #fef7f1;
+        font-family: 'Georgia', serif;
+        color: #4e342e;
+    }
+
+    header {
+        background-color: #a1887f;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-family: 'Playfair Display', serif;
+        border-bottom: 4px solid #6d4c41;
+    }
+
+    h1, h2, h3 {
+        font-family: 'Playfair Display', serif;
+        color: #4e342e;
+    }
+
+    a {
+        color: #6d4c41;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #3e2723;
+        text-decoration: underline;
+    }
+
+    main, section {
+        background-color: #ffffffcc;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        margin: 20px auto;
+        max-width: 900px;
+    }
+
+    img {
+        max-width: 300px;
+        border-radius: 10px;
+        box-shadow: 2px 2px 10px #d7ccc8;
+    }
+
+    button, .btn {
+        background-color: #a1887f;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        margin: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: 'Courier New', monospace;
+    }
+
+    button:hover, .btn:hover {
+        background-color: #6d4c41;
+    }
+
+    footer {
+        text-align: center;
+        background-color: #a1887f;
+        color: white;
+        padding: 10px;
+        margin-top: 40px;
+        font-size: 14px;
+        border-top: 4px solid #6d4c41;
+    }
+
+    .card {
+        margin: 20px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+        transition: transform 0.2s ease-in-out;
+    }
+
+    .card:hover {
+        transform: scale(1.02);
+    }
+
+    .card img {
+        width: 100%;
+        max-width: 250px;
+        margin-bottom: 15px;
+    }
+
+    .card a {
+        font-weight: bold;
+    }
+
+    .cards-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    </style>
 </head>
 
 <body>
-    <main>>
+    <main>
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
@@ -31,20 +134,21 @@
                             <img src="../IMG/cafe-caseiro.webp" class="bd-placeholder-img card-img-top" width="100%" height="225"
                                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                                 preserveAspectRatio="xMidYMid slice">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Café Caseiro</text>
+                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
+                                    dy=".3em">Café Caseiro</h4>
                             </svg>
                             <div class="card-body">
                                 <p class="card-text">
-                                    This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                                    <b>Descrição:</b> Café caseiro
+                                </p>
+                                <p class="card-text">
+                                    <b>Preço:</b> R$ 9,00
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <a href="pgcaseiro.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">☆☆☆☆</small>
                                 </div>
                             </div>
                         </div>
@@ -54,19 +158,21 @@
                             <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                                 preserveAspectRatio="xMidYMid slice">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
+                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
+                                    dy=".3em">Cappuccino</h4>
                             </svg>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">
+                                    <b>Descrição:</b> Cappuccino
+                                </p>
+                                <p class="card-text">
+                                    <b>Preço:</b> R$ 9,00
+                                </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <a href="pgcappuccino.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">☆☆☆☆</small>
                                 </div>
                             </div>
                         </div>
@@ -76,19 +182,21 @@
                             <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                                 preserveAspectRatio="xMidYMid slice">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
+                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
+                                    dy=".3em">Extra-Forte</h4>
                             </svg>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">
+                                    <b>Descrição:</b> Café caseiro
+                                </p>
+                                <p class="card-text">
+                                    <b>Preço:</b> R$ 9,00
+                                </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <a href="pgextra-forte.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">☆☆☆☆</small>
                                 </div>
                             </div>
                         </div>
@@ -99,19 +207,21 @@
                             <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                                 preserveAspectRatio="xMidYMid slice">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
+                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
+                                    dy=".3em">Italiano</h4>
                             </svg>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">
+                                    <b>Descrição:</b> Italiano
+                                </p>
+                                <p class="card-text">
+                                    <b>Preço:</b> R$ 9,00
+                                </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <a href="pgitaliano.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">☆☆☆☆</small>
                                 </div>
                             </div>
                         </div>
