--- a/cafe-melhorado/HTML/pgitaliano.html
+++ b/cafe-melhorado/HTML/pgitaliano.html
@@ -6,6 +6,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio | Italiano</title>
     <link rel="stylesheet" href="../CSS/cafes.css">
+    <style>
+        body {
+        background-color: #fef7f1;
+        font-family: 'Georgia', serif;
+        color: #4e342e;
+    }
+
+    header {
+        background-color: #a1887f;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-family: 'Playfair Display', serif;
+        border-bottom: 4px solid #6d4c41;
+    }
+
+    h1, h2, h3 {
+        font-family: 'Playfair Display', serif;
+        color: #4e342e;
+    }
+
+    a {
+        color: #6d4c41;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #3e2723;
+        text-decoration: underline;
+    }
+
+    main, section {
+        background-color: #ffffffcc;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        margin: 20px auto;
+        max-width: 900px;
+    }
+
+    img {
+        max-width: 300px;
+        border-radius: 10px;
+        box-shadow: 2px 2px 10px #d7ccc8;
+    }
+
+    button, .btn {
+        background-color: #a1887f;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        margin: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: 'Courier New', monospace;
+    }
+
+    button:hover, .btn:hover {
+        background-color: #6d4c41;
+    }
+
+    footer {
+        text-align: center;
+        background-color: #a1887f;
+        color: white;
+        padding: 10px;
+        margin-top: 40px;
+        font-size: 14px;
+        border-top: 4px solid #6d4c41;
+    }
+
+    .card {
+        margin: 20px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 12px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+        transition: transform 0.2s ease-in-out;
+    }
+
+    .card:hover {
+        transform: scale(1.02);
+    }
+
+    .card img {
+        width: 100%;
+        max-width: 250px;
+        margin-bottom: 15px;
+    }
+
+    .card a {
+        font-weight: bold;
+    }
+
+    .cards-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    </style>
 </head>
 
 <body>
