atualização para entrega

--- a/cafe-melhorado/HTML/pgcappuccino.html
+++ b/cafe-melhorado/HTML/pgcappuccino.html
@@ -124,7 +124,7 @@
         </section>
         <section>
             <h3>Descrição</h3>
-            <p>Café Caseiro</p>
+            <p>Cappuccino</p>
             <h3>Preço</h3>
             <p>R$8,00</p>
         </section>
