--- a/cafe-melhorado/HTML/pgextra-forte.html
+++ b/cafe-melhorado/HTML/pgextra-forte.html
@@ -124,7 +124,7 @@
         </section>
         <section>
             <h3>Descrição</h3>
-            <p>Café Extra-Forte</p>
+            <p>Extra-Forte</p>
             <h3>Preço</h3>
             <p>R$6,00</p>
         </section>
