--- a/cafe-melhorado/HTML/pgitaliano.html
+++ b/cafe-melhorado/HTML/pgitaliano.html
@@ -124,7 +124,7 @@
         </section>
         <section>
             <h3>Descrição</h3>
-            <p>Café Italiano</p>
+            <p>Italiano</p>
             <h3>Preço</h3>
             <p>R$7,00</p>
         </section>
