--- a/cafe-melhorado/HTML/index.html
+++ b/cafe-melhorado/HTML/index.html
@@ -8,106 +8,111 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
     <style>
         body {
-        background-color: #fef7f1;
-        font-family: 'Georgia', serif;
-        color: #4e342e;
-    }
+            background-color: #fef7f1;
+            font-family: 'Georgia', serif;
+            color: #4e342e;
+        }
 
-    header {
-        background-color: #a1887f;
-        color: white;
-        padding: 20px;
-        text-align: center;
-        font-family: 'Playfair Display', serif;
-        border-bottom: 4px solid #6d4c41;
-    }
+        header {
+            background-color: #a1887f;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-family: 'Playfair Display', serif;
+            border-bottom: 4px solid #6d4c41;
+        }
 
-    h1, h2, h3 {
-        font-family: 'Playfair Display', serif;
-        color: #4e342e;
-    }
+        h1,
+        h2,
+        h3 {
+            font-family: 'Playfair Display', serif;
+            color: #4e342e;
+        }
 
-    a {
-        color: #6d4c41;
-        text-decoration: none;
-    }
+        a {
+            color: #6d4c41;
+            text-decoration: none;
+        }
 
-    a:hover {
-        color: #3e2723;
-        text-decoration: underline;
-    }
+        a:hover {
+            color: #3e2723;
+            text-decoration: underline;
+        }
 
-    main, section {
-        background-color: #ffffffcc;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        margin: 20px auto;
-        max-width: 900px;
-    }
+        main,
+        section {
+            background-color: #ffffffcc;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            max-width: 900px;
+        }
 
-    img {
-        max-width: 300px;
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px #d7ccc8;
-    }
+        img {
+            max-width: 300px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px #d7ccc8;
+        }
 
-    button, .btn {
-        background-color: #a1887f;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        margin: 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        font-family: 'Courier New', monospace;
-    }
+        button,
+        .btn {
+            background-color: #a1887f;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-family: 'Courier New', monospace;
+        }
 
-    button:hover, .btn:hover {
-        background-color: #6d4c41;
-    }
+        button:hover,
+        .btn:hover {
+            background-color: #6d4c41;
+        }
 
-    footer {
-        text-align: center;
-        background-color: #a1887f;
-        color: white;
-        padding: 10px;
-        margin-top: 40px;
-        font-size: 14px;
-        border-top: 4px solid #6d4c41;
-    }
+        footer {
+            text-align: center;
+            background-color: #a1887f;
+            color: white;
+            padding: 10px;
+            margin-top: 40px;
+            font-size: 14px;
+            border-top: 4px solid #6d4c41;
+        }
 
-    .card {
-        margin: 20px;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: #fff;
-        border-radius: 12px;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-        transition: transform 0.2s ease-in-out;
-    }
+        .card {
+            margin: 20px;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+            transition: transform 0.2s ease-in-out;
+        }
 
-    .card:hover {
-        transform: scale(1.02);
-    }
+        .card:hover {
+            transform: scale(1.02);
+        }
 
-    .card img {
-        width: 100%;
-        max-width: 250px;
-        margin-bottom: 15px;
-    }
+        .card img {
+            width: 100%;
+            max-width: 250px;
+            margin-bottom: 15px;
+        }
 
-    .card a {
-        font-weight: bold;
-    }
+        .card a {
+            font-weight: bold;
+        }
 
-    .cards-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
+        .cards-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
     </style>
 </head>
 
@@ -117,7 +122,8 @@
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Café Senac</h1>
-                    <p class="lead text-body-secondary">Aqui você encontra nossas melhores delícias!! Navegue no site e encontre o que deseja.</p>
+                    <p class="lead text-body-secondary">Aqui você encontra nossas melhores delícias!! Navegue no site e
+                        encontre o que deseja.</p>
                     <p>
                         <a href="about.html" class="btn btn-primary my-2">Sobre Nós</a>
                     </p>
@@ -131,22 +137,23 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="../IMG/cafe-caseiro.webp" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice">
-                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Café Caseiro</h4>
+                            <img src="../IMG/cafe-caseiro.webp" class="bd-placeholder-img card-img-top" width="100%"
+                                height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                                aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice">
+                            <rect width="100%" height="100%" fill="#55595c" />
+                            <h4 x="50%" y="50%" fill="#eceeef" dy=".3em">Café Caseiro</h4>
                             </svg>
                             <div class="card-body">
                                 <p class="card-text">
                                     <b>Descrição:</b> Café caseiro
                                 </p>
                                 <p class="card-text">
-                                    <b>Preço:</b> R$ 9,00
+                                    <b>Preço:</b> R$ 7,00
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="pgcaseiro.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                        <a href="pgcaseiro.html" type="button" class="btn btn-sm btn-outline-secondary"
+                                            target="_blank">View</a>
                                     </div>
                                     <small class="text-body-secondary">☆☆☆☆</small>
                                 </div>
@@ -155,48 +162,50 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice">
-                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Cappuccino</h4>
-                            </svg>
+                            <img src="../IMG/cafe-cappuccino.jpg" class="bd-placeholder-img card-img-top" width="100%"
+                                height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                                aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice">
+                            <rect width="100%" height="100%" fill="#55595c" />
+                            <h4 x="50%" y="50%" fill="#eceeef" dy=".3em">Cappuccino</h4>
+                            </img>
                             <div class="card-body">
                                 <p class="card-text">
                                     <b>Descrição:</b> Cappuccino
                                 </p>
                                 <p class="card-text">
-                                    <b>Preço:</b> R$ 9,00
+                                    <b>Preço:</b> R$ 10,00
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="pgcappuccino.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                        <a href="pgcappuccino.html" type="button"
+                                            class="btn btn-sm btn-outline-secondary" target="_blank">View</a>
                                     </div>
-                                    <small class="text-body-secondary">☆☆☆☆</small>
+                                    <small class="text-body-secondary">☆☆☆☆☆</small>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice">
-                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Extra-Forte</h4>
-                            </svg>
+                            <img src="../IMG/cafe-extraforte.jfif" class="bd-placeholder-img card-img-top" width="100%"
+                                height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                                aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice">
+                            <rect width="100%" height="100%" fill="#55595c" />
+                            <h4 x="50%" y="50%" fill="#eceeef" dy=".3em">Extra-Forte</h4>
+                            </img>
                             <div class="card-body">
                                 <p class="card-text">
-                                    <b>Descrição:</b> Café caseiro
+                                    <b>Descrição:</b> Extra-Forte
                                 </p>
                                 <p class="card-text">
-                                    <b>Preço:</b> R$ 9,00
+                                    <b>Preço:</b> R$ 8,50
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="pgextra-forte.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                        <a href="pgextra-forte.html" type="button"
+                                            class="btn btn-sm btn-outline-secondary" target="_blank">View</a>
                                     </div>
-                                    <small class="text-body-secondary">☆☆☆☆</small>
+                                    <small class="text-body-secondary">☆☆☆</small>
                                 </div>
                             </div>
                         </div>
@@ -204,11 +213,11 @@
 
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice">
-                                <rect width="100%" height="100%" fill="#55595c" /><h4 x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Italiano</h4>
+                            <img src="../IMG/cafe-italiano.png" class="bd-placeholder-img card-img-top" width="100%"
+                                height="225" xmlns="http://www.w3.org/2000/svg" role="img"
+                                aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice">
+                            <rect width="100%" height="100%" fill="#55595c" />
+                            <h4 x="50%" y="50%" fill="#eceeef" dy=".3em">Italiano</h4>
                             </svg>
                             <div class="card-body">
                                 <p class="card-text">
@@ -219,31 +228,10 @@
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="pgitaliano.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                        <a href="pgitaliano.html" type="button" class="btn btn-sm btn-outline-secondary"
+                                            target="_blank">View</a>
                                     </div>
-                                    <small class="text-body-secondary">☆☆☆☆</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">☆☆☆☆☆</small>
                                 </div>
                             </div>
                         </div>
@@ -256,7 +244,8 @@
 
     <footer class="text-body-secondary py-5">
         <div class="container">
-            <p class="mb-1">Esta tela foi feito com auxílio de &copy; Bootstrap, e então editada por mim. Amanda Rothmann Piovesana</p>
+            <p class="mb-1">Esta tela foi feito com auxílio de &copy; Bootstrap, e então editada por mim. Amanda
+                Rothmann Piovesana</p>
         </div>
     </footer>
 
